# api/controllers/order.js
@@ -5,15 +5,14 @@
     const db = require("../../models/index.js");
     const Orders = db.Order;
     const Restaurants = db.Restaurant;
-    const amqp = require('amqplib/callback_api');
-    const { producerOne } = require('../helpers/queueSys')
-    const { calcDistance } = require('../helpers/distanceService')
+    const { producerOne, consumer } = require('../helpers/queueSys');
+    const { calcDistance } = require('../helpers/distanceService');
+    const { sender } = require('../helpers/mailer');
 
     
     function createOrder(req, res, next) {
         const { meals, totalCost, address, latLng, restaurantId } = req.body
         Orders.create({ meals, totalCost, address, latLng, restaurantId }).then(order => {
-            // you can now access the newly created task via the variable task4
             res.json({success:1, description:'Success'});
             return order;
         }).then(order => {
@@ -24,24 +23,66 @@
                 calcDistance(Location.coordinates , order.latLng.coordinates)
                 .then( ({data}) => {
                     if(data.rows[0].elements[0].status === "OK"){
-                        console.log(data.rows[0].elements[0].duration.text);
+                        console.log('delivery at: ',data.rows[0].elements[0].duration.text);
+                        producerOne(JSON.stringify({'distance':data.rows[0].elements[0].duration.text, 'orderId': order.id, 'message':'You have a new order, Order Id: '+order.id}),'Notifications')
                     } else {
+                        producerOne(JSON.stringify({'distance':'none', 'message':'Google did not found a route for order: '+order.id}),'Notifications')
                         console.log("Google did not found a path for your motorcycle");
                     }
-                    producerOne(JSON.stringify({'distance':data.rows[0].elements[0].duration.text, 'message':'You have a new order, Order Id: '+order.id}),'Notifications')
                     producerOne(JSON.stringify(order),'Orders')
                     return true;
+                }).catch(err =>{
+                    producerOne(JSON.stringify({'distance':'none', 'message':'some error occurred for order: '+order.id}),'Notifications')
+                    console.log("error ",err);
                 });
                 return Location, commercialEmail;
-            })
+
+            }).catch(err =>{
+                console.log("error ",err);
+            });
 
             
             return order;
+        }).catch(err =>{
+            console.log("error ",err);
+            res.json({success:0, description:'error ' + err});
         });
     }
 
+    function getOrder(req, res, next) {
+        consumer('Orders').then((ch)=> {
+            ch.prefetch(1);
+            return ch.consume('Orders', function(msg) {
+              if (msg !== null) {
+                var recievedOrder = JSON.parse(msg.content.toString());
+                Restaurants.findById(
+                    recievedOrder.restaurantId,
+                    { attributes: ['commercialEmail'] }
+                ).then( ({ commercialEmail }) => {
+                    return sender.sendMail(
+                        {
+                            from: 'flopez@teravisiontech.com',
+                            to: commercialEmail,
+                            subject: 'You have a new order',
+                            text: 'Your have a new order!'
+                        },
+                        (error, info) => {
+                            if (error) console.log(error);
+                            else
+                                console.log('Email successfully sent to '+commercialEmail+': '+info.response);
+                        }
+                    );
+                })    
+
+                res.json(recievedOrder);
+              }
+            });
+          });
+    }
+
     module.exports = {
-        createOrder 
+        createOrder,
+        getOrder
     };
 
     /*"Location": {
